--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>How much sugar is in soda?</title>
+    <title>How much sugar is in soda?s?</title>
     <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
